cleaned up stage scripts

--- a/package.json
+++ b/package.json
@@ -27,17 +27,10 @@
     "postuglify": "npm run pass",
     "uglify:server": "uglifyjs dist/miru.js -cmo dist/miru.js",
     "uglify:client": "uglifyjs dist/miru-connect.js -cmo dist/miru-connect.js",
-    "dev:css": "node src/server/miru.js -v -p test/stage/ --development -w [ npm run watch:stage:css, test/stage/bundle.css ]",
-    "dev:js": "node src/server/miru.js -v -p test/stage/ --development -w [ npm run watch:stage:js, test/stage/bundle.js ]",
-    "dev": "node src/server/miru.js -v -p test/stage/ --development -w [ npm run watch:stage:js, test/stage/bundle.js ] -w [ npm run watch:stage:css, test/stage/bundle.css ]",
-    "dev:dist": "./cli.js -v -p test/stage/ --development -w [ npm run watch:stage:js, test/stage/bundle.js ] -w [ npm run watch:stage:css, test/stage/bundle.css ]",
-    "cli": "./cli.js -p test/stage/ --development -w [ npm run watch:stage:js, test/stage/bundle.js ] -w [ npm run watch:stage:css, test/stage/bundle.css ] -t test/stage/index.html",
-    "srccli": "./srccli.js -p test/stage/ --development -w [ npm run watch:stage:js, test/stage/bundle.js ] -w [ npm run watch:stage:css, test/stage/bundle.css ] -t test/stage/index.html",
-    "cliWithLogs": "./cli.js --logs -p test/stage/ --development -w [ npm run watch:stage:js, test/stage/bundle.js ] -w [ npm run watch:stage:css, test/stage/bundle.css ] -t test/stage/index.html",
-    "build:stage:js": "browserify -t [ babelify --presets [ env ] ] test/stage/app.js -o test/stage/bundle.js",
-    "watch:stage:js": "watchify -v --debug -t [ babelify --presets [ env ] ] test/stage/app.js -o test/stage/bundle.js",
-    "build:stage:css": "stylus -u nib -r test/stage/app.styl -o test/stage/bundle.css",
-    "watch:stage:css": "stylus -w -u nib -r test/stage/app.styl -o test/stage/bundle.css",
+    "srccli": "./srccli.js -p test/stage/ --development -w [ npm run watch:stage:js -o test/stage/bundle.js -r bytes.written ] -w [ npm run watch:stage:css -o test/stage/bundle.css ] -t test/stage/index.html",
+    "srcclil": "./srccli.js --logs -p test/stage/ --development -w [ npm run watch:stage:js -o test/stage/bundle.js -r bytes.written ] -w [ npm run watch:stage:css -o test/stage/bundle.css ] -t test/stage/index.html",
+    "watch:stage:js": "watchify --bare --verbose --debug -t [ babelify --presets [ env ] ] test/stage/app.js -o test/stage/bundle.js",
+    "watch:stage:css": "stylus -w -u nib test/stage/app.styl -o test/stage/bundle.css",
     "lint": "spacestandard src/**/*.js",
     "pass": "passlint dist/miru.js dist/miru-connect.js",
     "pretest": "npm run pass",
