--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "lint": "spacestandard src/**/*.js",
     "pass": "passlint dist/miru.js dist/miru-connect.js",
     "pretest": "npm run pass",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cd test && tape 'test-cli-*'"
   },
   "repository": {
     "type": "git",
@@ -68,6 +68,7 @@
     "babelify": "~7.3.0",
     "brfs": "~1.4.3",
     "browserify": "~14.5.0",
+    "cpy": "~7.0.1",
     "faucet": "0.0.1",
     "mkdirp": "~0.5.1",
     "ncp": "~2.0.0",
