added client/puppeteer tests, refactored stage scripts

--- a/package.json
+++ b/package.json
@@ -29,13 +29,15 @@
     "uglify:client": "uglifyjs dist/miru-connect.js -cmo dist/miru-connect.js",
     "srccli": "./srccli.js -p test/stage/ --development -w [ npm run watch:stage:js -o test/stage/bundle.js -r bytes.written ] -w [ npm run watch:stage:css -o test/stage/bundle.css ] -t test/stage/index.html",
     "srcclil": "./srccli.js --logs -p test/stage/ --development -w [ npm run watch:stage:js -o test/stage/bundle.js -r bytes.written ] -w [ npm run watch:stage:css -o test/stage/bundle.css ] -t test/stage/index.html",
-    "watch:stage": "./srccli.js -p test/stage/ -w [ npm run watch:stage:js -o test/stage/bundle.js -r bytes.written ] -w [ npm run watch:stage:css -o test/stage/bundle.css ] -t test/stage/index.html",
+    "watch:stage": "./srccli.js --port 4050 -p test/stage/ -w [ npm run watch:stage:js -o test/stage/bundle.js -r bytes.written ] -w [ npm run watch:stage:css -o test/stage/bundle.css ] -t test/stage/index.html",
     "watch:stage:js": "watchify --bare --verbose --debug -t [ babelify --presets [ env ] ] test/stage/app.js -o test/stage/bundle.js",
     "watch:stage:css": "stylus -w -u nib test/stage/app.styl -o test/stage/bundle.css",
     "lint": "spacestandard src/**/*.js",
     "pass": "passlint dist/miru.js dist/miru-connect.js",
     "pretest": "npm run pass",
-    "test": "cd test && tape 'test-cli-*'"
+    "test:cli": "cd test && tape 'test-cli-*' | faucet",
+    "test:client": "cd test && tape 'test-usage-case-*' | faucet",
+    "test": "npm run test:cli && npm run test:client"
   },
   "repository": {
     "type": "git",
@@ -75,6 +77,7 @@
     "ncp": "~2.0.0",
     "nib": "~1.1.2",
     "passlint": "0.0.13",
+    "puppeteer": "~1.7.0",
     "rimraf": "~2.6.2",
     "spacestandard": "0.0.6",
     "stylus": "~0.54.5",
