--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "redom": "~3.4.0",
     "string-width": "~2.1.1",
     "subarg": "~1.0.0",
+    "tree-kill": "~1.2.0",
     "ua-parser-js": "~0.7.17",
     "wooster": "~0.3.8"
   },
