chore: updated dependencies

--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "dasu": "0.0.22",
     "express": "~4.16.3",
     "find-root": "~1.1.0",
-    "kiite": "0.0.6",
-    "miteru": "~0.6.6",
+    "kiite": "~0.3.3",
+    "miteru": "~0.6.7",
     "path-shorten": "0.0.3",
     "redom": "~3.4.0",
     "string-width": "~2.1.1",
