chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -53,11 +53,13 @@
     "compression": "~1.7.3",
     "cors": "~2.8.4",
     "cross-spawn-with-kill": "~1.0.0",
+    "passlint": "~0.3.2",
     "dasu": "0.0.22",
     "express": "~4.16.3",
     "find-root": "~1.1.0",
     "kiite": "~0.3.3",
     "miteru": "~0.6.7",
+    "nozombie": "~0.5.0",
     "path-shorten": "0.0.6",
     "redom": "~3.4.0",
     "string-width": "~2.1.1",
@@ -77,7 +79,6 @@
     "mkdirp": "~0.5.1",
     "ncp": "~2.0.0",
     "nib": "~1.1.2",
-    "passlint": "0.0.13",
     "puppeteer": "~2.0.0",
     "rimraf": "~2.6.2",
     "spacestandard": "0.0.6",
