chore(deps): update dasu, kiite

--- a/package.json
+++ b/package.json
@@ -55,10 +55,10 @@
     "compression": "~1.7.3",
     "cors": "~2.8.4",
     "cross-spawn-with-kill": "~1.0.0",
-    "dasu": "0.0.22",
+    "dasu": "~0.4.1",
     "express": "~4.16.3",
     "find-root": "~1.1.0",
-    "kiite": "~0.3.3",
+    "kiite": "~0.4.0",
     "miteru": "~0.6.7",
     "nozombie": "~0.5.1",
     "passlint": "~0.3.2",
