chore: update babelify scripts to use @babel/preset-env instead of old babel-preset-env

--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "prepublish": "npm run build && npm run pass",
     "build": "npm run build:source && npm run uglify",
     "build:source": "npm run build:client && npm run build:server",
-    "build:server": "browserify --node --no-bundle-external --standalone miru -t [ babelify --presets [ env ] ] src/server/miru.js -o dist/miru.js",
-    "build:client": "browserify --bare -t [ babelify --presets [ env ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
-    "deps:client": "browserify --list --bare -t [ babelify --presets [ env ] ] src/client/main.js -o dist/miru-connect.js",
-    "watch:client": "watchify -v -t [ babelify --presets [ env ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
-    "watch:miru-connect": "watchify -v -t [ babelify --presets [ env ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
+    "build:server": "browserify --node --no-bundle-external --standalone miru -t [ babelify --presets [ @babel/preset-env ] ] src/server/miru.js -o dist/miru.js",
+    "build:client": "browserify --bare -t [ babelify --presets [ @babel/preset-env ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
+    "deps:client": "browserify --list --bare -t [ babelify --presets [ @babel/preset-env ] ] src/client/main.js -o dist/miru-connect.js",
+    "watch:client": "watchify -v -t [ babelify --presets [ @babel/preset-env ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
+    "watch:miru-connect": "watchify -v -t [ babelify --presets [ @babel/preset-env ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
     "uglify": "npm run uglify:client && npm run uglify:server",
     "postuglify": "npm run pass",
     "uglify:server": "uglifyjs dist/miru.js -cmo dist/miru.js",
@@ -32,7 +32,7 @@
     "srccli": "./srccli.js -p test/stage/ --development -w [ npm run watch:stage:js -o test/stage/bundle.js -r bytes.written ] -w [ npm run watch:stage:css -o test/stage/bundle.css ] -t test/stage/index.html",
     "srcclil": "./srccli.js --logs -p test/stage/ --development -w [ npm run watch:stage:js -o test/stage/bundle.js -r bytes.written ] -w [ npm run watch:stage:css -o test/stage/bundle.css ] -t test/stage/index.html",
     "watch:stage": "./srccli.js --port 4050 -p test/stage/ -w [ npm run watch:stage:js -o test/stage/bundle.js -r bytes.written ] -w [ npm run watch:stage:css -o test/stage/bundle.css ] -t test/stage/index.html",
-    "watch:stage:js": "watchify --bare --verbose --debug -t [ babelify --presets [ env ] ] test/stage/app.js -o test/stage/bundle.js",
+    "watch:stage:js": "watchify --bare --verbose --debug -t [ babelify --presets [ @babel/preset-env ] ] test/stage/app.js -o test/stage/bundle.js",
     "watch:stage:css": "stylus -w -u nib test/stage/app.styl -o test/stage/bundle.css",
     "lint": "spacestandard src/**/*.js",
     "pass": "passlint dist/miru.js dist/miru-connect.js",
