--- a/package.json
+++ b/package.json
@@ -49,26 +49,26 @@
   "license": "MIT",
   "dependencies": {
     "ansi-to-html": "~0.6.14",
-    "body-parser": "~1.18.2",
+    "body-parser": "~1.19.0",
     "cli-color": "~1.2.0",
     "cli-progress-box": "0.0.2",
-    "compression": "~1.7.3",
-    "cors": "~2.8.4",
+    "compression": "~1.7.4",
+    "cors": "~2.8.5",
     "cross-spawn-with-kill": "~1.0.0",
     "dasu": "~0.4.1",
-    "express": "~4.16.3",
+    "express": "~4.17.1",
     "find-root": "~1.1.0",
     "kiite": "~0.4.0",
-    "miteru": "~0.6.7",
-    "nozombie": "~0.5.1",
-    "passlint": "~0.4.0",
-    "path-shorten": "0.0.6",
+    "miteru": "~0.7.0",
+    "nozombie": "~0.7.0",
+    "passlint": "~0.5.0",
+    "path-shorten": "~0.1.2",
     "redom": "~3.4.0",
-    "string-width": "~2.1.1",
+    "string-width": "~4.2.0",
     "subarg": "~1.0.0",
     "tree-kill": "~1.2.0",
     "ua-parser-js": "~0.7.17",
-    "wooster": "~0.3.9"
+    "wooster": "~0.5.0"
   },
   "devDependencies": {
     "@babel/core": "~7.11.1",
