--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "build": "npm run build:source && npm run uglify",
     "build:source": "npm run build:client && npm run build:server",
     "build:server": "browserify --node --no-bundle-external --standalone miru -t [ babelify --presets [ @babel/preset-env ] ] src/server/miru.js -o dist/miru.js",
-    "build:client": "browserify --bare -t [ babelify --presets [ @babel/preset-env ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
-    "deps:client": "browserify --list --bare -t [ babelify --presets [ @babel/preset-env ] ] src/client/main.js -o dist/miru-connect.js",
+    "build:client": "browserify -t [ babelify --presets [ @babel/preset-env ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
+    "deps:client": "browserify --list -t [ babelify --presets [ @babel/preset-env ] ] src/client/main.js -o dist/miru-connect.js",
     "watch:client": "watchify -v -t [ babelify --presets [ @babel/preset-env ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
     "watch:miru-connect": "watchify -v -t [ babelify --presets [ @babel/preset-env ] ] src/client/main.js -o dist/miru-connect.js 2>&1 | wooster",
     "uglify": "npm run uglify:client && npm run uglify:server",
