--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "passlint": "~0.5.0",
     "path-shorten": "~0.1.2",
     "redom": "~3.4.0",
+    "redstar": "0.0.2",
     "string-width": "~4.2.0",
     "subarg": "~1.0.0",
     "tree-kill": "~1.2.0",
